<resources>
    <string name="app_name">Be Santa</string>
    <string name="facebook_app_id">1821832594782178</string>
    <string name="fb_login_protocol_scheme">fb1821832594782178</string>

    <!-- Generic -->
    <string name="be_santa">#BeSanta</string>
    <string name="make_someone_happy">Make someone happy</string>
    <string name="ok">OK</string>
    <string name="thank_you">Thank You</string>

    <string name="profile">PROFILE</string>
    <string name="scanner">SCANNER</string>
    <string name="gifts">GIFTS</string>
    <string name="stories">STORIES</string>
    <string name="see_the_whole_story">See the whole story</string>
    <string name="send_a_gift">Send a gift</string>
    <string name="report">Report</string>
    <string name="today_date">Today, %1$s.</string>
    <string name="no_internet_message">Please check your internet connection.</string>
    <string name="something_went_wrong">Something went wrong. Please try again later.</string>
    <string name="connect_with_facebook">Connect with FaceBook</string>
    <string name="see_the_whole_description">See All</string>
    <string name="support">Support</string>
    <string name="campaigns">Campaigns</string>
    <string name="sticker_category_cola">Coca Cola</string>
    <string name="beard">Beard</string>
    <string name="sent_gifts_placeholder">Sent Gifts: 0</string>
    <string name="received_gifts_placeholder">Received Gifts: 0</string>
    <string name="percent_format">%d %%</string>

    <!-- Scanner -->
    <string name="scanner_error">An error occurred while scanning the coupon. Please try again.</string>
    <string name="camera_rationale">We need access to your camera in order to scan the QR code.</string>
    <string name="points">Points</string>

    <!-- Gifts -->
    <string name="sent">Sent</string>
    <string name="received">Received</string>
    <string name="open_your_gift">Open your gift</string>

    <!-- Prizes -->
    <string name="dear_santa">Dear Santa</string>
    <string name="price_format">/%d pts/</string>
    <string name="your_message">YOUR MESSAGE</string>
    <string name="name_format">%s,</string>
    <string name="send">Send</string>

    <string name="your_story">Your Story</string>
    <string name="sent_gifts">Sent Gifts: %d</string>
    <string name="received_gifts">Received Gifts: %d</string>
    <string name="share_with">Share with</string>
    <string name="facebook">Facebook</string>
    <string name="tell_your_story">Tell your story</string>

    <!-- Send Gift -->
    <string name="send_gift_error">An error occurred while sending the gift. Please try again.</string>
    <string name="for_being_santastic">For being so santastic!</string>
</resources>
