<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorPrimary">

        <TextView
            android:id="@+id/txt_be_santa"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="59dp"
            android:fontFamily="@font/you2013"
            android:text="@string/be_santa"
            android:textColor="@android:color/white"
            android:textSize="40sp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/txt_be_santa"
            android:layout_centerHorizontal="true"
            android:fontFamily="@font/gothambold"
            android:text="@string/make_someone_happy"
            android:textAllCaps="true"
            android:textColor="@android:color/white"
            android:textSize="10sp"/>

        <TextView
            android:id="@+id/txt_amount"
            android:layout_width="162dp"
            android:layout_height="162dp"
            android:layout_centerInParent="true"
            android:background="@drawable/oval_background"
            android:fontFamily="@font/you2013"
            android:gravity="center"
            android:textColor="@android:color/white"
            android:textSize="60sp"
            android:textStyle="bold"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/txt_amount"
            android:layout_centerInParent="true"
            android:fontFamily="@font/gothambold"
            android:gravity="center"
            android:text="@string/points"
            android:textAllCaps="true"
            android:textColor="@android:color/white"
            android:textSize="16sp"/>

        <View
            android:id="@+id/anchor"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_centerInParent="true"/>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@id/anchor"
            android:layout_marginBottom="64dp"
            android:layout_marginStart="64dp"
            android:layout_toEndOf="@id/anchor"
            android:src="@drawable/ic_ornaments_1"
            tools:ignore="ContentDescription"/>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/anchor"
            android:layout_marginEnd="72dp"
            android:layout_marginTop="80dp"
            android:layout_toStartOf="@id/anchor"
            android:src="@drawable/ic_ornaments_2"
            tools:ignore="ContentDescription"/>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@id/anchor"
            android:layout_marginBottom="56dp"
            android:layout_marginEnd="56dp"
            android:layout_toStartOf="@id/anchor"
            android:src="@drawable/ic_ornaments_3"
            tools:ignore="ContentDescription"/>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/anchor"
            android:layout_marginStart="56dp"
            android:layout_marginTop="56dp"
            android:layout_toEndOf="@id/anchor"
            android:src="@drawable/ic_ornaments_4"
            tools:ignore="ContentDescription"/>

        <Button
            android:id="@+id/btn_ok"
            android:layout_width="262dp"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="16dp"
            android:backgroundTint="@android:color/white"
            android:fontFamily="@font/gothambold"
            android:text="@string/ok"
            android:textColor="@color/colorPrimary"/>
    </RelativeLayout>
</layout>
