<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@android:color/white"
        tools:context="com.google.firebase.example.fireeats.ui.detail.RestaurantDetailActivity">

        <FrameLayout
            android:id="@+id/story_top_card"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:elevation="4dp">

            <ImageView
                android:id="@+id/img_story"
                android:layout_width="match_parent"
                android:layout_height="240dp"
                android:alpha="1.0"
                android:scaleType="centerCrop"
                android:src="@drawable/feed_1" />

        </FrameLayout>

        <android.support.design.widget.FloatingActionButton
            android:id="@+id/fab_take_another_photo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/story_top_card"
            android:layout_alignParentRight="true"
            android:layout_marginBottom="-28dp"
            android:layout_marginRight="16dp"
            app:srcCompat="@drawable/ic_photo_camera" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_below="@+id/story_top_card"
            android:layout_marginEnd="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="24dp"
            android:orientation="vertical"
            tools:visibility="visible">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/gothambold"
                android:text="@string/your_story"
                android:textAllCaps="true"
                android:textColor="#FFEB2224"
                android:textSize="12sp" />

            <EditText
                android:id="@+id/edit_story_info"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:maxLines="6" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:fontFamily="@font/gothambold"
                android:text="@string/share_with"
                android:textAllCaps="true"
                android:textColor="#FFEB2224"
                android:textSize="10sp"
                tools:ignore="SmallSp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="24dp"
                android:layout_marginTop="10dp">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:fontFamily="@font/gothamregular"
                    android:text="@string/facebook"
                    android:textColor="@android:color/black"
                    android:textSize="16sp" />

                <android.support.v7.widget.SwitchCompat
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="true" />
            </LinearLayout>

            <android.support.v4.widget.Space
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1" />

            <Button
                android:id="@+id/btn_tell_your_story"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="32dp"
                android:layout_marginStart="32dp"
                android:padding="12dp"
                android:backgroundTint="@color/colorPrimary"
                android:text="@string/tell_your_story"
                android:textAllCaps="true"
                android:textColor="@color/white" />

            <ProgressBar
                android:id="@+id/progressBar"
                android:layout_width="26dp"
                android:layout_height="26dp"
                android:indeterminate="true"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="32dp"
                android:visibility="invisible"/>


        </LinearLayout>
    </RelativeLayout>
</layout>