<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <android.support.design.widget.CoordinatorLayout
        android:id="@+id/grp_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white">

        <android.support.design.widget.AppBarLayout
            android:id="@+id/app_bar_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    app:layout_collapseMode="parallax"
                    app:layout_collapseParallaxMultiplier="0.5">

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="240dp">

                        <ImageView
                            android:id="@+id/img_avatar"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:scaleType="centerCrop"
                            android:src="@color/colorPrimaryDark" />

                        <TextView
                            android:id="@+id/txt_first_name"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignParentBottom="true"
                            android:layout_centerHorizontal="true"
                            android:layout_marginBottom="48dp"
                            android:fontFamily="@font/you2013"
                            android:text="Gabriel"
                            android:textColor="@color/white"
                            android:textSize="48sp" />

                        <TextView
                            android:id="@+id/txt_last_name"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignParentBottom="true"
                            android:layout_centerHorizontal="true"
                            android:layout_marginBottom="36dp"
                            android:fontFamily="@font/gothambold"
                            android:text="Jensen"
                            android:textAllCaps="true"
                            android:textColor="@color/white"
                            android:textSize="12sp" />
                    </RelativeLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="48dp"
                        android:background="#FFDF2E3A"
                        android:gravity="center_vertical"
                        android:orientation="horizontal"
                        android:paddingLeft="16dp"
                        android:paddingRight="16dp">

                        <TextView
                            android:id="@+id/txt_sent_times"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:fontFamily="@font/gothambold"
                            android:text="@string/sent_gifts_placeholder"
                            android:textAllCaps="true"
                            android:textColor="@color/white"
                            android:textSize="14sp" />

                        <TextView
                            android:id="@+id/txt_received_times"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/gothambold"
                            android:text="@string/received_gifts_placeholder"
                            android:textAllCaps="true"
                            android:textColor="@color/white"
                            android:textSize="14sp" />
                    </LinearLayout>
                </LinearLayout>

            </RelativeLayout>
        </android.support.design.widget.AppBarLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            app:layout_behavior="@string/appbar_scrolling_view_behavior">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="16dp"
                    android:fontFamily="@font/gothambold"
                    android:text="@string/stories"
                    android:textColor="@color/cc_red"
                    android:textSize="10sp" />

                <android.support.v7.widget.RecyclerView
                    android:id="@+id/rv_stories"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" />
            </LinearLayout>
        </LinearLayout>

        <android.support.design.widget.FloatingActionButton
            android:id="@+id/fab_gift"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|end"
            android:layout_margin="@dimen/margin_medium"
            android:src="@drawable/send_gift_floating" />
    </android.support.design.widget.CoordinatorLayout>

</layout>